Fix alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: Karma, sans-serif;
+  font-family: Karma, serif;
   line-height: 1.5;
   margin: 0;
 }
@@ -28,7 +28,7 @@ ol li {
 }
 
 ol li img {
-  width: 80%;
+  width: 75%;
   color: #6f00e7;
   align-self: center;
 }
@@ -66,7 +66,6 @@ ul li img {
   width: auto;
   padding: .5em;
   align-self: flex-end;
-
 }
 
 ul {
@@ -83,7 +82,7 @@ ul {
 ul li:nth-child(1) {
   display: flex;
   align-content: center;
-  justify-content: center;
+  align-items: center;
   flex-direction: row;
   width: 50%;
   background-color: #6f00e7;
